fix orgy overflow on desktop

--- a/files/assets/css/orgy.css
+++ b/files/assets/css/orgy.css
@@ -1,3 +1,10 @@
+
+@media (min-width: 768px) {
+	lite-youtube {
+		max-width: 20vw !important;
+	}
+}
+
 .orgy-top-container {
 	display: flex;
 	justify-content: space-around;
